--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 	"icons": { "128": "images/icon_128.png" },
 	"browser_action": {
 		"default_icon": "images/icon.png",
-		"default_popup": "index.html"
+		"default_popup": "popup.html"
 	},
 	"permissions": ["activeTab"]
 }
