--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
-patreon: https://www.patreon.com/EssOussama
-ko_fi: https://ko-fi.com/eoussama
+patreon: EssOussama
+ko_fi: eoussama
 custom: https://paypal.me/OussamaEssamadi?locale.x=en_US
